Bug 519677 "OK" button in "About Thunderbird" dialog should be aligned right. r=philringnalda

--- a/mail/base/content/aboutDialog.css
+++ b/mail/base/content/aboutDialog.css
@@ -61,7 +61,7 @@
    border: 0;
 }
 
-button[dlgtype="extra2"] {
+button[dlgtype="extra2"], #aboutMenu {
   -moz-margin-start: 13px;
 }
  
